# tf-platform

./: .gitignore  Dockerfile  backend.tf  docker-compose.yml  main.tf  pyproject.toml  variables.tf
.github/workflows/: github-actions.yml
src/roman_api/: main.py  test.py  test_main.py
