[project]
name = "roman_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary",
    "python-dotenv",
    "numpy",
    "roman_converter @ git+https://github.com/adsnijders/number_converter.git" # May need to change
]

[tool.hatch.build]
packages = ["src/roman_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references=true

[project.optional-dependencies]
ci = [
    "pytest>=7.0", 
    "black>=24.0", 
    "ruff>=0.0.300",
    "commitizen>=3.0.0"
]

[tool.black]
line-length = 88
target-version = ["py312"]
# skip-string-normalization = false is default
# include = "src/roman_api/**/*.py"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = [
    "E", 
    "F", 
    "I", 
    "B"
]
lint.ignore = ["E501"]
# Optional: fix issues automatically
# fix = true
# unsafe-fixes = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$major.$minor.$patch"